--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,11 @@
 page-home {
-
+    #cart-btn {
+        position: relative;
+     }
+     
+     #cart-badge {
+        position: absolute;
+        top: 0px;
+        right: 0px;
+     }
 }
