--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,11 +1,29 @@
 page-home {
-    #cart-btn {
+    #notification-button {            
         position: relative;
-     }
-     
-     #cart-badge {
+        width: 42px;
+        top:1px;
+        right: 1px;
+        overflow: visible!important;
+    }
+    #notifications-badge {
+        background-color: red;
         position: absolute;
-        top: 0px;
-        right: 0px;
-     }
+        top: -3px;
+        right: -3px;
+        border-radius: 100%;
+    }
+
+     button {
+        ion-badge {
+            position: absolute;
+            top: -0.2rem;
+            right: -0.2rem;
+            opacity: 0.9;
+    
+            & ~ ion-icon {
+                margin-right: 1.2rem;
+            }
+        }
+    }
 }
