--- a/src/pages/pedido/pedido.scss
+++ b/src/pages/pedido/pedido.scss
@@ -1,5 +1,10 @@
 page-pedido {
-    .underline {
-     border-bottom: 1px solid #000000 !important; 
+    .list-avatar-page {
+    ion-note {
+      font-size: 12px;
+      align-self: flex-start;
+      margin-top: 14px;
     }
-}
+  }
+  }
+  
